<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AWOXapp</string>
    <string name="myDevices">Cihazlarım</string>


    <string name="cardView_kitchen">Mutfak</string>
    <string name="cardView_bathroom">Temizlik Aletleri</string>
    <string name="cardView_television">TV</string>
    <string name="cardView_other">Diğer</string>


    <string name="content_description_add_button">Add Device Button</string>
    <string name="content_description_back_button">Back Button</string>
    <string name="content_description_kitchen">photo of a modern kitchen for kitchen devices category</string>
    <string name="content_description_bathroom">photo of a bathroom for cleaning devices category</string>
    <string name="content_description_tv">photo of a room with a smart tv for tv category</string>
    <string name="content_description_home">photo of a home for other devices category</string>
    <string name="content_description_vertical_dots">settings of saved devices</string>


    <string name="add_device">Cihaz Ekle</string>

    <string name="awox_motto">Sizinleyiz, Teknolojinin İçindeyiz</string>
    <string name="dont_you_have_an_account">Hesabın Yok Mu?</string>


    <string name="hint_edit_text_email">E-posta</string>
    <string name="hint_edit_text_password">Şifre</string>
    <string name="hint_phone_number">(5__) ___ __ __</string>


    <string name="button_forgot_password">Şifremi Unuttum</string>
    <string name="button_login">Giriş Yap</string>
    <string name="button_register"> Kayıt Ol</string>

    <string name="register_page_first_name">Ad</string>
    <string name="register_page_middle_name">İkinci Ad</string>
    <string name="register_page_surname">Soyad</string>
    <string name="register_page_email">E-posta</string>
    <string name="register_page_phone_number">Telefon</string>
    <string name="register_page_password">Şifre</string>
    <string name="register_page_confirm_password">Şifre(Tekrar)</string>


    <string name="required">Gerekli*</string>

    <string name="add_device_alert_dialog_title">Cihaz Ekle</string>
    <string name="add_device_alert_dialog_supporting_text">Cihazınıza Bir İsim Verin</string>
    <string name="add_device_alert_dialog_positive_button">Kaydet</string>
    <string name="add_device_alert_dialog_negative_button">İptal</string>


    <string name="register_page_term_of_use_checkbox">Üyelik koşullarını ve kişisel verilerimin korunmasını kabul ediyorum.</string>
    <string name="register_page_commercial_permission_for_sms">Kampanya, duyuru, bilgilendirmelerden sms ile haberdar olmak istiyorum.</string>
    <string name="register_page_commercial_permission_for_email">Kampanya, duyuru, bilgilendirmelerden e-posta ile haberdar olmak istiyorum.</string>

    <string name="saved_devices_popup_delete_device">Cihazı Sil</string>
    <string name="saved_devices_popup_settings">Ayarlar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="confirm_password_alert_dialog_title"> Uyarı </string>
    <string name="confirm_password_alert_dialog_message"> Şifreler aynı değil </string>
    <string name="confirm_password_alert_dialog_button"> Tamam </string>


    <string name="strong_passwords_conditions1">En az 1 büyük harf,</string>
    <string name="strong_passwords_conditions2">En az 1 küçük harf,</string>
    <string name="strong_passwords_conditions3">En az 1 sembol (ör: /*>#$+),</string>
    <string name="strong_passwords_conditions4">En az 1 sayı içermeli,</string>
    <string name="strong_passwords_conditions5">En az 8 karakterden oluşmalıdır.</string>


    <string name="confirm_password_warning_message"> Şifreler eşleşmiyor </string>


    <string name="message_invalid_value"> Geçersiz değer</string>

    <string name="message_empty_text">Bu alan boş bırakılamaz!</string>

    <string name="accept_membership_agreement_title">Üyelik Sözleşmesi</string>
    <string name="accept_protection_of_personal_data_title">Kişisel Verilerin Korunumu</string>
    <string name="accept_button">Kabul et</string>
    <string name="cancel_button">İptal</string>

    <string name="already_have_an_account">Zaten bir hesabın var mı?</string>

    <string name="login_failure">E-posta ya da şifre hatalı</string>

    <string name="login_empty_password">Şifre boş bırakılamaz.</string>
    <string name="login_empty_email">E-posta alanı boş bırakılamaz.</string>
    <string name="login_invalid_email">Lütfen geçerli bir e-posta adresi giriniz.</string>
    <string name="login_invalid_phone_number">Lütfen geçerli bir telefon numarası giriniz.</string>

    <string name="reset_password_button">Şifremi yenile</string>
    <string name="reset_password_text">Şifrenizi yenilemek istediğiniz e-posta adresini yazınız.</string>

    <string name="go_back">Giriş ekranına geri dön</string>

    <string name="signup_succesful_title">Kayıt Başarılı</string>
    <string name="signup_succesful_message">Doğrulama için posta kutunuzu kontrol edin</string>


    <string name="email_verificaiton_not_completed_button">Doğrulama linki gönder</string>
    <string name="email_verification_link_is_send_title">Doğrulama linki gönderildi</string>
    <string name="email_verificaiton_not_completed_message">E-posta Doğrulanmadı</string>
    <string name="okey">Tamam</string>

    <string name="home">Ana Sayfa</string>
    <string name="devices">Cihazlar</string>
    <string name="shopping">Mağaza</string>
    <string name="account">Profil</string>

    <string name="tv_remote_control_bottom_control">Kontrol</string>
    <string name="tv_remote_control_bottom_touchpad">Touchpad</string>
    <string name="tv_remote_control_bottom_settings">Ayarlar</string>

    <string name="buy_now">Satın Alın</string>

    <string name="store_tv">Televizyon</string>
    <string name="store_small_appliances">Küçük Ev Aletleri</string>
    <string name="store_white_goods">Beyaz Eşya</string>
    <string name="store_heaters">Isıtıcı</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="number_keyboard_1">1</string>
    <string name="number_keyboard_2">2</string>
    <string name="number_keyboard_3">3</string>
    <string name="number_keyboard_4">4</string>
    <string name="number_keyboard_5">5</string>
    <string name="number_keyboard_6">6</string>
    <string name="number_keyboard_7">7</string>
    <string name="number_keyboard_8">8</string>
    <string name="number_keyboard_9">9</string>
    <string name="number_keyboard_0">0</string>


</resources>