<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_fragment"
    tools:context=".detailedDevicesActivity.KeyboardFragmentNumbers">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/onSurfaceLight"
                android:fontFamily="@font/poppindbold"
                android:text="@string/number_keyboard_1"
                android:textColor="@color/white"
                android:textSize="35sp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/onSurfaceLight"
                android:fontFamily="@font/poppindbold"
                android:text="@string/number_keyboard_2"
                android:textColor="@color/white"
                android:textSize="35sp">


            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/onSurfaceLight"
                android:fontFamily="@font/poppindbold"
                android:text="@string/number_keyboard_3"
                android:textColor="@color/white"
                android:textSize="35sp">


            </com.google.android.material.button.MaterialButton>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/onSurfaceLight"
                android:fontFamily="@font/poppindbold"
                android:text="@string/number_keyboard_4"
                android:textColor="@color/white"
                android:textSize="35sp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/onSurfaceLight"
                android:fontFamily="@font/poppindbold"
                android:text="@string/number_keyboard_5"
                android:textColor="@color/white"
                android:textSize="35sp">


            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/onSurfaceLight"
                android:fontFamily="@font/poppindbold"
                android:text="@string/number_keyboard_6"
                android:textColor="@color/white"
                android:textSize="35sp">


            </com.google.android.material.button.MaterialButton>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/onSurfaceLight"
                android:fontFamily="@font/poppindbold"
                android:text="@string/number_keyboard_7"
                android:textColor="@color/white"
                android:textSize="35sp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/onSurfaceLight"
                android:fontFamily="@font/poppindbold"
                android:text="@string/number_keyboard_8"
                android:textColor="@color/white"
                android:textSize="35sp">


            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/onSurfaceLight"
                android:fontFamily="@font/poppindbold"
                android:text="@string/number_keyboard_9"
                android:textColor="@color/white"
                android:textSize="35sp">


            </com.google.android.material.button.MaterialButton>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="85dp"
                android:layout_height="90dp">

            </View>


            <com.google.android.material.button.MaterialButton
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/onSurfaceLight"
                android:fontFamily="@font/poppindbold"
                android:text="@string/number_keyboard_0"
                android:textColor="@color/white"
                android:textSize="35sp">


            </com.google.android.material.button.MaterialButton>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>