<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddDeviceActivity">


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/content_description_back_button"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.019"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.714">

        </ImageButton>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <androidx.cardview.widget.CardView
                android:id="@+id/kitchenDevicesCardView"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">


                <ImageView
                    android:id="@+id/imageView_add_device_kitchen"
                    android:layout_width="wrap_content"
                    android:layout_height="186dp"
                    android:alpha="0.3"
                    android:contentDescription="@string/content_description_kitchen">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/cardView_kitchen"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </TextView>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cleaningDevicesCardView"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:checkable="false"
                android:clickable="false"
                android:focusable="false"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">


                <ImageView
                    android:id="@+id/imageView_add_device_bathroom"
                    android:layout_width="wrap_content"
                    android:layout_height="163dp"
                    android:alpha="0.3"
                    android:contentDescription="@string/content_description_bathroom">


                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/cardView_bathroom"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </TextView>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/televisionsCardView"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="3dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:checkable="false"
                android:clickable="false"
                android:focusable="false"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">


                <ImageView
                    android:id="@+id/imageView_add_device_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="134dp"
                    android:alpha="0.3"
                    android:contentDescription="@string/content_description_tv">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/cardView_television"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </TextView>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/otherDevicesCardView"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                android:checkable="false"
                android:clickable="false"
                android:focusable="false"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">


                <ImageView
                    android:id="@+id/imageView_add_device_home"
                    android:layout_width="match_parent"
                    android:layout_height="131dp"
                    android:alpha="0.3"
                    android:contentDescription="@string/content_description_home">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/cardView_other"
                    android:textColor="@color/white"
                    android:textSize="30sp">

                </TextView>
            </androidx.cardview.widget.CardView>

        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>