<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@drawable/color_gradient_black"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/content_description_back_button"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037">

    </ImageButton>


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/congratulation_card"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="@color/md_theme_surfaceContainer"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="321dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:paddingStart="15dp"
                        android:paddingTop="60dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="30dp"
                        android:text="@string/reset_password_text"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="25dp"
                        android:autofillHints=""
                        android:hint="@string/hint_edit_text_email"
                        android:inputType="textEmailAddress">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextResetPasswordEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/shape_edit_text"
                            android:fontFamily="@font/poppinsmedium"
                            android:textColor="@color/white" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textViewButtonGoBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:textSize="13sp"
                        android:fontFamily="@font/poppinssemibold"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/go_back">
                    </TextView>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/resetPasswordButton"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="25dp"
                        android:backgroundTint="@color/black_button"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/reset_password_button"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView"
                        app:layout_constraintVertical_bias="0.728">

                    </com.google.android.material.button.MaterialButton>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginBottom="100dp"
                android:padding="1dp"
                android:src="@drawable/icon_lock_reset" />

        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>